<resources>
    <string name="app_name">Kalemah</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="read_it_together">Read it together</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="Create_new_account">Create new account</string>
    <string name="Dont_have_an_account">"Don't have an account? "</string>
    <string name="Lets_do_it_now">"Let's do it now" </string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_your_link">"Enter your email address and we we'll send a link to reset your password"</string>
    <string name="reset_password">Reset password</string>
    <string name="dont_have_account">"Don't have an account!?"</string>
    <string name="facebook_app_id">2549573815309618</string>
    <string name="fb_login_protocol_scheme">fb2549573815309618</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="Email">Email</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->


    <string-array name="level_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
