<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.ForgetPassword_Activity"

    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp">



    <LinearLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="25sp"
            android:textColor="@color/welcome_back"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_your_link"
            android:textSize="15sp"
            android:textColor="@color/read_it_together"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/text">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/read_it_together"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                >
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_resetPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_button"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/welcome_back"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"/>
            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/welcome_back"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>



    </RelativeLayout>


</RelativeLayout>