<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.SignIn_Activity"
    android:background="@drawable/background">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp">

    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/welcome_back"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/readItTogetherTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/WelcomeTextView"
        android:layout_marginTop="10dp"
        android:text="@string/read_it_together"
        android:textColor="@color/read_it_together"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_below="@+id/WelcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/welcome_back"
                android:textColorHint="@color/welcome_back"
                android:textSize="15sp"
                android:inputType="textEmailAddress"

                >
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/read_it_together"
                android:textColorHint="@color/welcome_back"
                android:textSize="15sp"
                android:inputType="textPassword"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/welcome_back"
                android:textSize="14sp"
                android:textStyle="bold" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_button"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/welcome_back"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account" />

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/welcome_back"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sign_in_google"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/google_button"
                    android:drawableLeft="@drawable/google_icon"
                    android:text="Sign up with Google"
                    android:textAllCaps="false"
                    android:textColor="#868686"
                    android:textSize="14sp" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                    <Button
                        android:id="@+id/fb"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/facebook_button"
                        android:drawableLeft="@drawable/facebook_icon"
                        android:onClick="onClickFacebookButton"
                        android:text="Sign up with Facebook"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textSize="14sp"
                        android:layout_marginBottom="10dp"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>

</RelativeLayout>